updated at: 2023-04-25 16:32, 【SDK3対応】ジョイントドアPrefabs【V2アップデート】 - TsubokuLab Store - BOOTH

--- a/VRChat/60/1226460.html
+++ b/VRChat/60/1226460.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HLXelQlxfAiGvzkDn5AJ0GXkgw54Q7K/MWSN5FyNBbc="></script>
+    "uOAqe60CFvyCnKELgfkew+76kraUjUlhH+xPLtHasM8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【SDK3対応】ジョイントドアPrefabs【V2アップデート】","description":"FANBOX支援者の方へ、商品を無料プレゼント中です↓\nhttps://www.pixiv.net/fanbox/creator/5179544/post/286899\n------------\n2023/03/06 V2.1 スクリプトがMissingとなっていた一部Prefabを修正しました。\n2022/03/25 V2 VRCSDK3対応＆ドアモデル2種類 各3色を追加\n\nVRChatのワールドにギミック付きジョイントドア（ヒンジジョイント方式/スライド方式）を配置できるUnity用のPrefabセットです。\nVR空間では珍しい、手動で開ける方式のドアなので、ワールドに置くと現実味が増してより生活感を演出できます。\nドアフレームのサイズは W1000mm x H2000mm x D200mm です。\n\n※使用するにはVRCSDK3(VCC)及び簡単なワールド制作の知識が必要です。\n※SDK2で使用する方は前バージョンのv1.1をご利用下さい。\n\n動作サンプルは以下のワールド起動URLでご確認頂けます。\nhttps://www.vrchat.com/home/world/wrld_ade0fcd0-8801-435d-991e-5a2284aadaea","url":"https://booth.pm/ja/items/1226460","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/3e70b6b1-6fb3-42e5-bfec-d750c1f28694/i/1226460/b15cbb95-9a46-46ce-8237-db65da0ff0de_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HLXelQlxfAiGvzkDn5AJ0GXkgw54Q7K/MWSN5FyNBbc="></script>
+    nonce="uOAqe60CFvyCnKELgfkew+76kraUjUlhH+xPLtHasM8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1226460/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               766
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1226460/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               766
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
