updated at: 2023-04-25 16:32, ゴミ箱.fbx - TsubokuLab Store - BOOTH

--- a/VRChat/95/1226195.html
+++ b/VRChat/95/1226195.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zwv9HMVVcS/Iy5fGUreZj7As2lSgWrv8K/g2oFzNTVY="></script>
+    "8MLDCQafZz28ofhIWWgCOPlNijicfeckI+LNU+8y0dQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ゴミ箱.fbx","description":"FANBOX支援者の方へ、商品を無料プレゼント中です↓\nhttps://www.pixiv.net/fanbox/creator/5179544/post/286899\n------------\n\nゲーム開発やVRChatなどで小道具に使えるゴミ箱3Dモデル\nフタが別れているので、アニメーションさせることもできます。\nキャラクターに持たせたり、被ったり、中に入ったり…自由にどうぞ。","url":"https://booth.pm/ja/items/1226195","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/3e70b6b1-6fb3-42e5-bfec-d750c1f28694/i/1226195/ef1103de-fef9-4f30-910f-ce7c52c24049_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zwv9HMVVcS/Iy5fGUreZj7As2lSgWrv8K/g2oFzNTVY="></script>
+    nonce="8MLDCQafZz28ofhIWWgCOPlNijicfeckI+LNU+8y0dQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1226195/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               105
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1226195/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               105
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
