updated at: 2023-04-25 16:32, タライ.fbx - TsubokuLab Store - BOOTH

--- a/VRChat/50/1226150.html
+++ b/VRChat/50/1226150.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kZfK3IPXOD+XsbsJlxIsf+4oNpu0qcEdKPEpQVVFWno="></script>
+    "A0CB7VqH/v+Wid9CNHWX29zQbTmrlal4W2aWDi2Q2ZY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"タライ.fbx","description":"FANBOX支援者の方へ、商品を無料プレゼント中です↓\nhttps://www.pixiv.net/fanbox/creator/5179544/post/286899\n------------\n\nゲーム開発やVRChatなどで小道具に使えるタライ3Dモデル\n頭上から落とすのにちょうど良い。","url":"https://booth.pm/ja/items/1226150","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/3e70b6b1-6fb3-42e5-bfec-d750c1f28694/i/1226150/ddd59892-94df-41f5-be76-a2f2c08903d8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kZfK3IPXOD+XsbsJlxIsf+4oNpu0qcEdKPEpQVVFWno="></script>
+    nonce="A0CB7VqH/v+Wid9CNHWX29zQbTmrlal4W2aWDi2Q2ZY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1226150/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1226150/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
