updated at: 2023-04-25 16:33, はんだごて.fbx - TsubokuLab Store - BOOTH

--- a/VRChat/43/1226043.html
+++ b/VRChat/43/1226043.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hRILCYfj4R87XEaOWMwzxJOIDs1hJBPv8BnkpJb6PBE="></script>
+    "6zmJKQB0ImqCXVyO32xZBQH7KK083q6PcAZzM8LKWeI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"はんだごて.fbx","description":"ゲーム開発やVRChatなどで武器や小道具に使えるはんだごてと台の3Dモデルセット\n専用のEmissionテクスチャで発光する。\n※EmissiveScrollシェーダーがおまけで付属してます。\n\nはんだごては「はんだ」を熱して溶かし、金属部品同士を溶接する為の工具。\n電子工作等で頻繁に使用される必須アイテム。\nの3Dモデル。","url":"https://booth.pm/ja/items/1226043","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3e70b6b1-6fb3-42e5-bfec-d750c1f28694/i/1226043/fa937fa5-5738-49f8-ada2-2b627075e42d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hRILCYfj4R87XEaOWMwzxJOIDs1hJBPv8BnkpJb6PBE="></script>
+    nonce="6zmJKQB0ImqCXVyO32xZBQH7KK083q6PcAZzM8LKWeI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1226043/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1226043/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
