updated at: 2023-04-25 16:33, 「VRChat使用推奨小物」救急箱 ~胃薬セット~ - paoran - BOOTH

--- a/VRChat/94/1225894.html
+++ b/VRChat/94/1225894.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QsYfoAG4zffZiI6vmCu0RD6EtHtyqBISDrIF67gN2XY="></script>
+    "YLo/U6QsfnGF0zzzXmsokp1ADuLSGOpypOxco7Fr77c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「VRChat使用推奨小物」救急箱 ~胃薬セット~","description":"様々な胃薬６種類と、救急箱のセットとなっています。\n中の薬は取り出すこともできるので、食事の前や胃腸の調子が悪い時にご利用ください。\nVRChat内でworldに設置して使うことを想定しています。\n\n※SDK3.0対応のため、アニメーションを削除してあります。","url":"https://booth.pm/ja/items/1225894","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/6fafd09f-818a-4190-9bd5-a575b372774f/i/1225894/52e12c68-8d89-4c83-b76d-5aeb23f49938_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QsYfoAG4zffZiI6vmCu0RD6EtHtyqBISDrIF67gN2XY="></script>
+    nonce="YLo/U6QsfnGF0zzzXmsokp1ADuLSGOpypOxco7Fr77c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1225894/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1225894/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
