--- a/VRChat/76/1225876.html
+++ b/VRChat/76/1225876.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "aTOAcCVZ8QM0WqDXevktF9fsZdC0604ZQV/lxfpi2mc="></script>
+    "JZ57WItsqNv7skzqRr7U/ZrGu6Z95Rv7PyAIaB/0tOc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"⊿BladeRifle(無償)","description":"当モデルは無償で提供しているモデルです。\n装着するモデルによってshaderが異なる為、\nFBX形式で頒布していますので、Material設定が必要になります。\n\n⊿型の剣銃です。（銃口は先端に埋め込まれています）\n\n三角ポリゴン：1702ポリゴン）\n（updateなどで若干誤差が出る可能性があります）\n\n付属品\n⊿_Blade_Rifle本体：fbxモデル\nテクスチャ用pngファイル１枚（1024pixel）\n\n標準では1024pixelのテクスチャが入っています。\n\n支援版については、本体をダウンロードして頂いて気に入ったら、ご支援頂けると嬉しいです。\n支援の方はお礼としてPSDファイルがダウンロードできます。\n（PSDファイルのみですので別途無料の本体もダウンロードをお願いします。）\n\n付属品\n支援用：編集用PSD　１ファイル（2048pixel）\n\nPSDは2048pixelになっていますので、高解像度が必要・好みのサイズを作りたい場合は其方をご利用ください。\n不要な部分だけ模様を消したりすることも出来ます。","url":"https://booth.pm/ja/items/1225876","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/679d00c5-3e09-411d-9a44-d32751ce260e/i/1225876/7788069b-294e-4432-8b87-2baf314a4a29_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aTOAcCVZ8QM0WqDXevktF9fsZdC0604ZQV/lxfpi2mc="></script>
+    nonce="JZ57WItsqNv7skzqRr7U/ZrGu6Z95Rv7PyAIaB/0tOc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1225876/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               315
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1225876/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               315
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
