--- a/VRChat/19/1225519.html
+++ b/VRChat/19/1225519.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1wO2XsZv6v+ZaKDmVmXSNOvX+xsIdVH4yHGw5N2/nMM="></script>
+    "Bokg+xD2WpnwAqp9y192hfjF6/nEkdF3/n91zPeQhaY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"板チョコレート","description":"VRChatで使用することを主用途として想定した板チョコレートです。\nバレンタインにどうぞ。\nUnitypackage化されているのでUnityで簡単に使用できます。\n\n無料版とブースト用有料版にはファイル、規約ともに一切違いがありませんが、有料版を購入していただけると作者がチョコレートを買えます。","url":"https://booth.pm/ja/items/1225519","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8cc9a32b-d34b-45e8-a53a-b3742ffcb83f/i/1225519/90bf7074-2843-4ce6-bac4-3925701ce55b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1wO2XsZv6v+ZaKDmVmXSNOvX+xsIdVH4yHGw5N2/nMM="></script>
+    nonce="Bokg+xD2WpnwAqp9y192hfjF6/nEkdF3/n91zPeQhaY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1225519/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1225519/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
