--- a/VRChat/37/1225437.html
+++ b/VRChat/37/1225437.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Pf2GaaXdwII3hhVSt4jXhaq8B3Bxt9Sq58RouMrGgto="></script>
+    "c6WZsh82WZz9fwiRpnRPvmCJxXSbb6vVXb1h2bLhKMs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Mikipom式キーボード","description":"VRChatワールド\"LIVEROID\"で利用されているキーボード！\n※パーティクルは同梱していません。","url":"https://booth.pm/ja/items/1225437","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/4e602196-59aa-40a4-8c3c-ce4430fc53f1/i/1225437/2431309b-85ca-4f45-8b96-c85a129d21d0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Pf2GaaXdwII3hhVSt4jXhaq8B3Bxt9Sq58RouMrGgto="></script>
+    nonce="c6WZsh82WZz9fwiRpnRPvmCJxXSbb6vVXb1h2bLhKMs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1225437/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1225437/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
