updated at: 2023-04-25 16:34, 【VRCSDK3対応】VRChatイベントカレンダーPrefab【毎日自動更新】 - TsubokuLab Store - BOOTH

--- a/VRChat/35/1223535.html
+++ b/VRChat/35/1223535.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MuHfdleN3Aj4xSlysCnuuTB34+CJ1LahD39BRvs/y84="></script>
+    "lqPRRZx+f9B8fpcqCGastQGNyF+IkWTltpnWbqE9o4I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRCSDK3対応】VRChatイベントカレンダーPrefab【毎日自動更新】","description":"【 概要 】\nVRChatのワールドにVRChatイベントカレンダーを配置できるUnity用のPrefabです。\n情報は毎日更新されるようになっているので、ホームワールドに設置するととても便利。\n\nPC向けの画像は1日12回、日本時間の0/2/4/6～(2の倍数)時の30～40分頃に更新されます。\nOculus Quest向けの画像は毎日1回、日本時間の0時15分～20分あたりで更新されます。\n\nずっとワールド内にいる場合はワールドの再読み込みをしないと更新されません。\n\n※カレンダーのデザインは変更になる可能性があります。\n※使用するにはVRChat及び簡単なワールド制作の知識が必要です。","url":"https://booth.pm/ja/items/1223535","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/3e70b6b1-6fb3-42e5-bfec-d750c1f28694/i/1223535/57f582ec-8222-4b77-81e7-51b9bc75b325_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MuHfdleN3Aj4xSlysCnuuTB34+CJ1LahD39BRvs/y84="></script>
+    nonce="lqPRRZx+f9B8fpcqCGastQGNyF+IkWTltpnWbqE9o4I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1223535/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1262
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1223535/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1262
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
