--- a/VRChat/81/1195981.html
+++ b/VRChat/81/1195981.html
@@ -72,9 +72,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -104,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gzHk/r7pLxmSzvdS+t7zDFPQHIpZPmCM5MB7QCRBGyc="></script>
+    "1PUQW35RseKLVMLiTzvpXjw7zVk4joFK5A0924ZwaSg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】Gear necklace ギア・ネックレス","description":"【お知らせ（8月11日）】\n・軽量版チェーン(ポリゴン数が約1/10、シェイプキーなし版）‬を追加してVer 1.5にしました。\n・同時に価格を100円値上げしました。\n‪・既にご購入いただいた方はアップデート版も無料で再DLできます。\n——\n\nVRChat・Unityでの使用を想定した歯車モチーフのネックレスです。\n(Questでの挙動は検証できていません)\n特徴\n・Animatorによってギアが回転します。\n・曲がり具合を調節するシェイプキー付きのチェーンが同梱されています。\n・シェーダーの異なる二種のプレハブが同梱されています。\n・少し重めのデータになります。購入前に仕様をご確認ください。\n\n【モデルの使用条件】\n　改変：OK   商用利用：OK\n　性的・暴力的コンテンツでの使用：NG\n　※詳細は利用規約をご確認ください。","url":"https://booth.pm/ja/items/1195981","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/d4226d01-b958-4710-a35d-de900bd2a76a/i/1195981/dfb10ea7-81c5-4a87-a4e4-8c3608e5148a_base_resized.jpg"}
     </script>
@@ -117,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gzHk/r7pLxmSzvdS+t7zDFPQHIpZPmCM5MB7QCRBGyc="></script>
+    nonce="1PUQW35RseKLVMLiTzvpXjw7zVk4joFK5A0924ZwaSg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -145,6 +142,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +158,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -201,7 +201,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1195981/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               178
@@ -216,14 +216,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1195981/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               178
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
