updated at: 2023-04-25 16:35, VRchat向け　アバター用ペンダント革紐 - chemical&#39;s shop - BOOTH

--- a/VRChat/81/1224381.html
+++ b/VRChat/81/1224381.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uMvj3ufpvM1reIdwmMva9Pn7XDqSJgEIgYGlKapTb00="></script>
+    "8Bu1etZVlBE6ZUxjaUiJLuFYl28JYJHzPBZ04Q6pYuI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け　アバター用ペンダント革紐","description":"※画像のペンダントトップは同梱されておりません。\nhttps://chemical15.booth.pm/items/1219936　（ペンダントトップ）\n\n■好きな物がペンダントにできるVRchat向けのペンダント用革紐です\n\n三角面換算で208ポリゴンとなっております。\nダイナミックボーンを使用する用のモデルと、ダイナミックボーンを使用しない用モデルが入っています。\n\n■使い方\n\n2種類のモデルと9種類のMaterialが入っており、ボーン構造はアバター用ネックレスチェーン（https://chemical15.booth.pm/items/1052437）と同じになっています。\nHumanoidRigで使用する場合は上半身ボーンの子オブジェクトにして使って下さい。\n詳しい設定は画像3枚目と4枚目を参考にしてください。\n※アバター用ネックレスチェーンの画像になっていますが、設定の仕方は同じです。\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布\nその他製作者が不適切と判断したもの\n\n■やっていい事\n改変","url":"https://booth.pm/ja/items/1224381","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1224381/b298afe0-2b7a-4afa-899a-ae2f1bf8e05c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uMvj3ufpvM1reIdwmMva9Pn7XDqSJgEIgYGlKapTb00="></script>
+    nonce="8Bu1etZVlBE6ZUxjaUiJLuFYl28JYJHzPBZ04Q6pYuI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1224381/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               328
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1224381/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               328
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
