--- a/VRChat/00/1224100.html
+++ b/VRChat/00/1224100.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "lP/ivqkYkMpUOU6j9fP/TlY6whltW3a37iJdVw1N+Bg="></script>
+    "YekXvozDoDEjizbWhk3Klgq2FUgbWJj4HXEFknGjOcI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"外灯","description":"外灯です。\n\nunitypackageでの配布です。\nArktoon-Shader(https://booth.pm/ja/items/1027997)でセットアップしています。\n他のShaderでは異なる描画になりますのでご注意してください。\n\nモデル概要\n・ポリゴン数　1236\n・マテリアル１\n・テクスチャ(Albedo,normal,metallic)\n\n商用利用可\n再配布化","url":"https://booth.pm/ja/items/1224100","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e0415562-fcb7-4594-a7f1-147b54a5ca15/i/1224100/5e09fe7a-abc0-4435-83c0-5b7c7c400eb1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lP/ivqkYkMpUOU6j9fP/TlY6whltW3a37iJdVw1N+Bg="></script>
+    nonce="YekXvozDoDEjizbWhk3Klgq2FUgbWJj4HXEFknGjOcI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1224100/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               306
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1224100/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               306
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
