--- a/VRChat/25/1220025.html
+++ b/VRChat/25/1220025.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZiGqSv4NrtVesNNNxvPRfe3k5HbhxsRHHV+Iq6RbGcc="></script>
+    "lzp9STXL4D1iJSfMbzL805gNHqRciia4U8VDdybQbvE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用アバター　亜人 アルクトゥルス　Avatar3.0　VRM同梱","description":"別の惑星に住む亜人　アルクトゥルス\n\n恐竜が絶滅せず長い年月をかけて人のような姿に進化したら\nこんな姿になっていたかもしれない。\n\nそんなコンセプトのキャラクターです。\n\n◆試着用VRChatワールドあります。\n起動用URLはこちら。\nhttps://vrchat.com/home/launch?worldId=wrld_95558c9f-d703-44f3-aca0-43ad03c2cec8\n\n\n購入して使用してくれた方がいましたら\nハッシュタグ#アノマロ工房　付きでツイートしてくれるとエゴサが捗ります。\n\n原案：リアル従兄弟のアルパカ1号（@momopaca1）","url":"https://booth.pm/ja/items/1220025","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1220025/cbcf0986-dcd8-4899-b7b3-a7f5c2c57be2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZiGqSv4NrtVesNNNxvPRfe3k5HbhxsRHHV+Iq6RbGcc="></script>
+    nonce="lzp9STXL4D1iJSfMbzL805gNHqRciia4U8VDdybQbvE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1220025/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               96
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1220025/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               96
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
