updated at: 2023-04-25 16:36, VRChatアバター向けアクセサリ　試製背負い式蒸気エンジンB型 - 第六製鉄部 - BOOTH

--- a/VRChat/25/1222925.html
+++ b/VRChat/25/1222925.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "TqJr+WuwWwlcZM2ZodylNbPNl6VMY9us1L1E0wJPce8="></script>
+    "asW9JkOtcOXk3wXeQ1mPMIVYKGvDjklHpgc5emexnoQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChatアバター向けアクセサリ　試製背負い式蒸気エンジンB型","description":"VRChatアバター向けアクセサリ　試製背負い式蒸気エンジンB型です。\n\n●VRChatアバターに装着することを想定としたアクセサリです。\n\n●本モデルは【ユニティちゃんトゥーンシェーダー 2.0 / UTS2 v.2.0.5】を使用しています。\n\n●モデル概要\n・△ポリゴン数：5,451\n・マテリアル数：3（本体1 煙1 蒸気1）\n・テクスチャ枚数：7枚\n・各種アニメーション、エフェクト設定済\n\n●内容物\n・UnityPackage\n・FBX 3つ(背面クッションやバルブの有無の差分)\n・Textureファイル(png 7枚 PSDは後の更新で追加の予定)\n・使い方.txt\n・利用規約.txt","url":"https://booth.pm/ja/items/1222925","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/b6334ced-5e5e-4d54-a755-a52e7eff9591/i/1222925/d52f65bc-e223-4570-b40c-d61bcc10e3b7_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TqJr+WuwWwlcZM2ZodylNbPNl6VMY9us1L1E0wJPce8="></script>
+    nonce="asW9JkOtcOXk3wXeQ1mPMIVYKGvDjklHpgc5emexnoQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -195,7 +195,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1222925/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               194
@@ -210,14 +210,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1222925/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               194
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
