updated at: 2023-04-25 16:37, VertexTransformShader(VRChat/Unity) - wraikny&#39;s shop - BOOTH

--- a/VRChat/32/1222332.html
+++ b/VRChat/32/1222332.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "N/N7zzZWB/d9bietszBt4G7twReNMCMtL3OyycHYUX0="></script>
+    "GZC/knKaNO1w7U96nnYlEy5hFqaMsblyVg2zNF7kAUc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VertexTransformShader(VRChat/Unity)","description":"適用したメッシュの描画時の位置・大きさ・角度を変更できるシェーダです。\n\nMITライセンスに従った上で、自由に改変・再配布していただいて構いません。\n\n---\n利用例\n\n形状に依っては、アバターのサブアームを実装するために使うことができます。\nVRChatでよく用いられるFixed Jointを用いた実装と比較して、\n- 低負荷\n- Performance Rank的に有利\n- 時間経過での不具合が発生しない\n- ボーン直下に置くため完全に追従する\nといったメリットがあります。\n\n---\n\n本シェーダのソースコードは GitHubでも公開しています。\nhttps://github.com/wraikny/VertexTransformShader","url":"https://booth.pm/ja/items/1222332","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/17196f09-c9fe-4c94-8cb2-5b76e97ce982/i/1222332/c8529f14-509c-4d9a-a0ae-b49053de265c_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="N/N7zzZWB/d9bietszBt4G7twReNMCMtL3OyycHYUX0="></script>
+    nonce="GZC/knKaNO1w7U96nnYlEy5hFqaMsblyVg2zNF7kAUc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -185,7 +187,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1222332/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               264
@@ -200,14 +202,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1222332/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               264
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
