updated at: 2023-04-25 16:40, Choker for Mishe - 結城ゆきのお店 - BOOTH

--- a/VRChat/06/1380406.html
+++ b/VRChat/06/1380406.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ojM+HWJ2o8PRWs/PhbPe/pnS/nQczEKOvIzXHYlz3ww="></script>
+    "j9I3mGu7GzahwiU5G1SHRvqw8PN1ImaaG/LaDqgPuTk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Choker for Mishe","description":"レザー製のチョーカーです。\nミーシェちゃんに合わせてあるので、Neckボーンに入れてください。それ以外のアバターへの適用は頑張ってください。\nhttps://booth.pm/ja/items/1256087\n\nArktoon-Shadersを同梱しています。マテリアルも設定済みです。unitypackageからインポートしてください。\n\nダウンロード前にお読みください。 https://github.com/YukiYukiVirtual/license/blob/master/1.md","url":"https://booth.pm/ja/items/1380406","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/cdb02673-8664-4200-9407-c3c4df48aa2c/i/1380406/8208e8de-b405-4312-92a6-225945f3a34f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ojM+HWJ2o8PRWs/PhbPe/pnS/nQczEKOvIzXHYlz3ww="></script>
+    nonce="j9I3mGu7GzahwiU5G1SHRvqw8PN1ImaaG/LaDqgPuTk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1380406/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               66
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1380406/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               66
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
